better date formatting in chart axis

--- a/corehq/apps/reports/templates/reports/partials/graphs/line_chart.html
+++ b/corehq/apps/reports/templates/reports/partials/graphs/line_chart.html
@@ -4,14 +4,6 @@
         var chart_config = {{ chart.config_dict|JSON }};
         var chart_data = {{ chart.data|JSON }};
         var chart_id = '#{{ chart_id }}';
-        for (i=0 ; i<chart_data.length; i++){
-            clinic_data = chart_data[i].values;
-            for (j=0; j<clinic_data.length; j++){
-                date = clinic_data[j].x;
-                clinic_data[j].x = new Date(date);
-            }
-        }
-        console.log(chart_data);
 
         $(chart_id).show();
 
@@ -22,21 +14,25 @@
             chart.xAxis.tickFormat(d3.format({{ chart.x_axis.format|JSON }}));
         {% endif %}
 
-        chart.xAxis.tickFormat(function(d) {return d3.time.format('%b %d')(new Date(d)); })
+        //Modify x-values to date-objects and set tickFormat
+        {% if chart.x_axis.dateFormat %}
+            for (i=0 ; i<chart_data.length; i++){
+                clinic_data = chart_data[i].values;
+                for (j=0; j<clinic_data.length; j++){
+                    date = clinic_data[j].x;
+                    clinic_data[j].x = new Date(date).getTime();
+                }
+            }
+            
+            chart.xAxis.tickFormat(function(d) {return d3.time.format({{ chart.x_axis.dateFormat|JSON }})(new Date(d)); })
+        {% endif %}
 
         chart.yAxis.axisLabel({{ chart.y_axis.label|JSON }});
         {% if chart.y_axis.format %}
             chart.yAxis.tickFormat(d3.format({{ chart.y_axis.format|JSON }}));
         {% endif %}
 
-        //chart.showControls(chart_config.showControls);
-        //chart.showLegend(chart_config.showLegend);
-        //chart.reduceXTicks(chart_config.reduceXTicks);
-        //chart.rotateLabels(chart_config.rotateLabels);
-        chart.tooltips(chart_config.tooltips);
-        //chart.stacked(chart_config.stacked);
         chart.margin(chart_config.margin);
-        //chart.staggerLabels(chart_config.staggerLabels);
 
         d3.select(chart_id + ' svg')
                 .datum(chart_data)
