--- a/custom/apps/gsid/templates/relative_date.html
+++ b/custom/apps/gsid/templates/relative_date.html
@@ -47,7 +47,7 @@
                          + ('0' + (startdate.getMonth()+1)).slice(-2) + '-'
                          + ('0' + startdate.getDate()).slice(-2);
             $('#{{ css_id }}_startdate').val(startdateString);
-            $(standardHQReport.filterAccordion).trigger('hqreport.filter.datespan.startdate', $(this).val());
+            $(standardHQReport.filterAccordion).trigger('hqreport.filter.datespan.startdate', $('#{{ css_id }}_startdate').val());
         });
         $('#{{ css_id }}_startdate').change(function() { 
             $(standardHQReport.filterAccordion).trigger('hqreport.filter.datespan.startdate', $(this).val());
