--- a/corehq/apps/reports/templates/reports/filters/multi_location.html
+++ b/corehq/apps/reports/templates/reports/filters/multi_location.html
@@ -77,7 +77,9 @@
 
 
         this.display_name = ko.computed(function() {
-            return this.name() == '_all' ? 'All' : this.name();
+            if (depth>0 && this.name() == '_all') 
+                return "All ("+hierarchy[depth-1]["type"]+")" 
+            return this.name() == '_all' ? 'All '+data.fixture_type : this.name();
         }, this);
 
         this.selected_child = ko.observable();
