--- a/corehq/apps/reports/templates/reports/partials/graphs/multibar_chart.html
+++ b/corehq/apps/reports/templates/reports/partials/graphs/multibar_chart.html
@@ -24,6 +24,7 @@
         chart.reduceXTicks(chart_config.reduceXTicks);
         chart.rotateLabels(chart_config.rotateLabels);
         chart.tooltips(chart_config.tooltips);
+        // Customize tooltip message
         {% if chart.tooltipFormat %}
             chart.tooltipContent(function(key, y, e, graph) { return e+ '{{ chart.tooltipFormat }}' +y });
         {% endif %}
